app/k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-backend
  template:
    metadata:
      labels:
        app: python-backend
    spec:
      containers:
        - name: python-backend
          image: a3888s/step-final-project:v4.0.1
          ports:
            - containerPort: 8080
